--- a/resources/pages/layout/list.html
+++ b/resources/pages/layout/list.html
@@ -1,6 +1,6 @@
 <section id="channel-list-nav" class="content-header">
-	<h1>布局列表</h1>
-	<small>Layout management</small>
+	<h1>节目模板</h1>
+	<small class="tips" style="position: absolute; top:20px; right: 16px;"><i class="fa fa-info-circle"></i>&nbsp使用模板可以制作强大的分屏节目，但需要预先将它们做好</small>
 	
 </section>
 <section class="content">
