--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -17,7 +17,14 @@ body,h1,h2,h3,h4,h5,h6{
 
 
 .tips{
-  color:#51a2e2;
+  color:#3c8dbc;
+  font-size: 14px;
+}
+
+
+.warn-i{
+  background:rgba(255,255,0,.8);
+  font-size: 14px;
 }
 
 .div-line-i{
