--- a/WEB-INF/templates/channel_edit_program.html
+++ b/WEB-INF/templates/channel_edit_program.html
@@ -1,11 +1,50 @@
 <div class="channel-program-header">
-    <input value="<%=name%>" type="text" />
+    <input value="<%=name%>" data-field="name" type="text" />
     <div class="channel-program-timer">
-        <input type="datetime" step="1" value="<%=lifetime_start%>">
-        <input type="datetime" step="1" value="<%=lifetime_end%>">
-        <input type="" >
+        <label>
+            开始时间
+        <input type="datetime-local" data-field="lifetime_start" step="1" value="<%=lifetime_start%>">
+        </label>
+        <label>
+            结束时间
+        <input type="datetime-local" data-field="lifetime_end" step="1" value="<%=lifetime_end%>">
+        </label>
+        <label>
+            持续时间
+        <input type="number" step="1" data-field="duration" value="<%=duration%>">
+        </label>
+        <label class="channel-editor-program-trigger">
+            <label class="timer-field timer-field-date">
+                <span></span>
+                月
+            </label>
+            <label class="timer-field timer-field-date">
+                <span></span>
+                日
+            </label>
+            <label class="timer-field timer-field-day">
+                <span></span>
+                日
+            </label>
+            <label class="timer-field">
+                <span></span>
+                点
+            </label>
+            <label class="timer-field">
+                <span></span>
+                分
+            </label>
+            <label class="timer-field">
+                <span></span>
+                秒
+            </label>
+            <button class="btn-channel-setup-timer">定时设置</button>
+        </label>
+        <label class="channel-editor-program-count">
+            播放次数
+        <input type="number" data-field="count" value="<%=count%>">
+        </label>
     </div>
-    <button class="btn-channel-setup-timer">定时设置</button>
 </div>
 <div class="channel-program-body">
     <div class="channel-program-layout">
