--- a/WEB-INF/templates/layout_edit_widget_property.html
+++ b/WEB-INF/templates/layout_edit_widget_property.html
@@ -20,7 +20,7 @@
 
 <div class="input-group" class="input-group" style="width: 115px; display: inline; float: left;">
     <label class="col-sm-3 control-label property-name-inline" style="padding-left: 0px; width: 16px;">宽</label>
-    <input type="number" value="<%=width%>" class="form-control" data-property-id="widget-left" style="margin-left: 4px; top:4px; width: 80px; height: 28px; line-height: 1">
+    <input type="number" value="<%=width%>" class="form-control" data-property-id="widget-width" style="margin-left: 4px; top:4px; width: 80px; height: 28px; line-height: 1">
    
 </div>
 
