--- a/WEB-INF/templates/channel_table_row.html
+++ b/WEB-INF/templates/channel_table_row.html
@@ -1,8 +1,8 @@
 <tr data-channel-id="<%=id%>">
-    <td><input type="checkbox"></td>
-    <td>频道名称:<%=name%></td>
+    <td style="width: 32px;"><input type="checkbox"></td>
+    <td><a href="#channel/edit?id=<%=id%>" class="btn-channel-detail"><i class="fa fa-newspaper-o"></i>&nbsp&nbsp<%=name%></a></td>
     <td>调度类型:<%=schedule_type%></td>
     <td>调度参数:<%=schedule_params%></td>
     <td>版本:<%=version%></td>
-    <td><a href="#channel/edit?id=<%=id%>" class="btn-channel-detail">编辑</a></td>
+    <!-- <td>编辑</td> -->
 </tr>
