--- a/resources/css/pages/channel/edit.css
+++ b/resources/css/pages/channel/edit.css
@@ -7,7 +7,8 @@
 }
 
 #channel-editor-wrapper .channel-editor-header {
-    height: 60px;
+    background-color: #3c8dbc;
+    height: 50px;
 }
 
 #channel-editor-wrapper .channel-editor-body {
