取消编辑，浏览器回退事件

--- a/resources/pages/layout/list.html
+++ b/resources/pages/layout/list.html
@@ -1,4 +1,4 @@
-<section id="channel-list-nav" class="content-header">
+<section class="content-header">
 	<h1>节目模板</h1>
 	<small class="tips" style="position: absolute; top:20px; right: 16px;"><i class="fa fa-info-circle"></i>&nbsp使用模板可以制作强大的分屏节目，但需要预先将它们做好</small>
 	
@@ -10,7 +10,7 @@
 
             <div class="box-tools pull-right">
                 <div class="has-feedback">
-                    <input id="channel-list-nav" type="text" class="form-control input-sm" placeholder="搜索布局">
+                    <input id="channel-list-search" type="text" class="form-control input-sm" placeholder="搜索布局">
                     <span class="glyphicon glyphicon-search form-control-feedback"></span>
                 </div>
             </div>
