--- a/resources/css/pages/channel/edit.css
+++ b/resources/css/pages/channel/edit.css
@@ -12,6 +12,9 @@
 }
 
 #channel-editor-wrapper .channel-editor-body {
+    padding-left: 30px;
+    padding-top: 15px;
+    padding-right: 30px;
     width: 100%;
     height: calc(100% - 60px);
 }
@@ -23,7 +26,7 @@
 }
 
 #channel-editor-wrapper .channel-program-list {
-    width: 300px;
+    width: 256px;
     height: 100%;
     float: left;
 }
@@ -151,4 +154,8 @@
     color: #333;
     font-weight: bold;
     font-size: 16px;
+}
+
+.channel-program-list-timed{
+    min-height: 80px;
 }
