添加布局编辑消息提醒，新建布局按钮，布局选择预览

--- a/WEB-INF/templates/layout_list_dialog_item.html
+++ b/WEB-INF/templates/layout_list_dialog_item.html
@@ -1,3 +1,5 @@
 <li data-layout-id="<%=id%>">
-    <div><%=name%></div>
+    <div style="<%=style%>">
+    </div>
+    <span><%=name%></span>
 </li>
