--- a/WEB-INF/templates/layout_list_dialog.html
+++ b/WEB-INF/templates/layout_list_dialog.html
@@ -5,7 +5,7 @@
         </button>
         <h3 class="modal-title">选择布局</h3>
     </div>
-    <div class="modal-header-body">
+    <div class="modal-body">
         <div class="has-feedback box-tools pull-right">
             <input type="text" class="layout-list-search form-control input-sm" placeholder="搜索布局">
             <span class="glyphicon glyphicon-search form-control-feedback">
