--- a/resources/pages/layout/list.html
+++ b/resources/pages/layout/list.html
@@ -20,7 +20,8 @@
 		<div id="layout-list-controls">
 			<!-- Check all button -->
 			<button type="button" class="btn btn-default btn-sm checkbox-toggle select-all"><i class="fa fa-square-o"></i></button>
-				<!-- <div class="has-feedback">
+			<a href="#layout/edit" class="btn btn-default btn-add-layout">添加布局</a>
+			<!-- <div class="has-feedback">
 					<input type="text" class="form-control">
 					<span class="input-group-btn">
 						<button type="button" class="btn btn-info btn-flat">搜索</button>
