--- a/WEB-INF/templates/channel_edit_program_list_item.html
+++ b/WEB-INF/templates/channel_edit_program_list_item.html
@@ -1,3 +1,3 @@
-<li data-id="<%=id%>">
-    <div><%=name%></div>
+<li class="program-list-item" data-id="<%=id%>">
+    <div class="program-list-item-title"><%=name%></div>
 </li>
