--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -19,6 +19,13 @@ body,h1,h2,h3,h4,h5,h6{
 ::-webkit-scrollbar-corner{} /*滚动条轨道上的滚动角*/ 
 
 
+.sticky-item-replace{
+  position: relative;
+  width: 100%;
+  height:43px;
+  background: red;
+}
+
 .tips{
   color:#3c8dbc;
   font-size: 14px;
@@ -568,4 +575,12 @@ a {
  }
   
 
-  
+.roles_assign .fa{
+  margin-right: 4px; 
+  margin-left: 15px;
+
+}
+
+.roles_assign .fa:nth-of-type(1){
+  margin-left: 0;
+}
