--- a/WEB-INF/templates/channel_edit_main.html
+++ b/WEB-INF/templates/channel_edit_main.html
@@ -4,7 +4,7 @@
         <button type="button" class="header-button-left glyphicon glyphicon-chevron-left btn-channel-editor-close"></button>
         
         <input class="direct-name-002 channel-editor-property" data-key="name" value="<%=name%>" />
-        <small class="direct-name-001-hint direct-name-hint" style="top: 18px; width: 24px; left: 75px;">
+        <small class="direct-name-002-hint direct-name-hint" style="top: 18px; width: 24px; left: 75px;">
             <i class="glyphicon glyphicon-edit" style="color: white"></i>
         </small>
 
@@ -57,7 +57,7 @@
                     点击添加新节目
                     <i class="glyphicon glyphicon-hand-up"></i>
                 </small>
-                <div class="box-header with-border" style="position: absolute; width: 256px; background: white; z-index: 2"> 
+                <div class="box-header with-border" style="position: absolute; width: 256px; background: white; z-index: 2; border-top: 1px solid #f4f4f4;"> 
                     <i class="glyphicon glyphicon-repeat" style="position: relative; top: 2px; font-size: 14px; margin-right: 0;"></i>
                     <h3 class="box-title">常规节目</h3>
 
@@ -95,13 +95,12 @@
 
             
         </div>
-        <div class="channel-program-editor">
+        <div class="channel-program-editor box box-default" >
             正在加载数据...
         </div>
     </div>
 
-    <div class="channel-editor-footer">
-    </div>
+    
 
 </div>
 
@@ -159,7 +158,7 @@
             var left = length * width/2 +77;
             $hint.css('left',left);
         });
-    }('.direct-name-002','.direct-name-001-hint'))
+    }('.direct-name-002','.direct-name-002-hint'))
 
 
 </script>
