--- a/resources/css/pages/layout/list_dialog.css
+++ b/resources/css/pages/layout/list_dialog.css
@@ -31,7 +31,9 @@
 #layout-list-dialog .layout-list>li>div {
     height: 80px;
     width: 100%;
-    background-size: 100% 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 #layout-list-dialog .layout-list>li>span {
