--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -593,3 +593,12 @@ a {
     *display: block;
 }
 /*////// /toast ///////*/
+
+
+/*////// marquee //////*/
+.marquee {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background: #ccc;
+}
+/*////// /marquee /////*/
