频道编辑样式更新

--- a/WEB-INF/templates/channel_edit_main.html
+++ b/WEB-INF/templates/channel_edit_main.html
@@ -62,7 +62,7 @@
                     <h3 class="box-title">常规节目</h3>
 
                      <div class="tools">
-                        <select class="channel-program-schedule-type">
+                        <select class="channel-program-schedule-type btn-default btn" style="height: 24px; padding: 0; padding-left: 5px;">
                             <% var type = JSON.parse(overall_schedule_params).Type; %>
                             <% if (type === 'Sequence') { %>
                             <option value="Sequence" selected>顺序</option>
