--- a/WEB-INF/templates/channel_edit_widget_item.html
+++ b/WEB-INF/templates/channel_edit_widget_item.html
@@ -1,3 +1,4 @@
-<li style="background-color: <%=background_color%>" data-id="<%=id%>">
+<li  data-id="<%=id%>">
+	<i class="wiget-mark" style="background-color: <%=background_color%>"></i>
     <div><%=name%></div>
 </li>
