--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -26,6 +26,11 @@ body,h1,h2,h3,h4,h5,h6{
   background: red;
 }
 
+.term-status-small{
+  font-size: 12px;
+  
+}
+
 .tips{
   color:#3c8dbc;
   font-size: 14px;
