--- a/resources/css/common/base.css
+++ b/resources/css/common/base.css
@@ -18,6 +18,16 @@ body,h1,h2,h3,h4,h5,h6{
 ::-webkit-scrollbar-thumb{border-radius:2px 2px 2px 2px; background:rgba(151,151,151,1);} /*滚动条轨道上的按钮*/
 ::-webkit-scrollbar-corner{} /*滚动条轨道上的滚动角*/ 
 
+.index-header-user-option{
+  color: white !important;
+  line-height: 31px !important;
+  padding: 0 !important; 
+}
+
+
+.index-header-user-option:hover{
+  background-color: #367faa !important;
+}
 
 .sticky-item-replace{
   position: relative;
