频道编辑时，UI实时响应

--- a/resources/css/pages/channel/edit.css
+++ b/resources/css/pages/channel/edit.css
@@ -84,8 +84,7 @@
     border: 1px solid #ddd;
     overflow: hidden;
     border-radius: 4px;
-    background-color: #f4f4f4;
-    background-image: url(../../../img/img_grid.png);
+    background: #f4f4f4 url(../../../img/img_grid.png);
 }
 
 #channel-editor-wrapper .channel-program-widget {
