--- a/resources/css/pages/layout/edit.css
+++ b/resources/css/pages/layout/edit.css
@@ -211,3 +211,7 @@
 .layout-edit-propoties-name:focus{
     border: 1px solid #ccc !important;
 }
+
+.layout-preview-text {
+    font-size: 40px;
+}
