添加删除布局

--- a/resources/pages/layout/list.html
+++ b/resources/pages/layout/list.html
@@ -19,8 +19,11 @@
 		<!-- /.box-header -->
 		<div id="layout-list-controls">
 			<!-- Check all button -->
-			<button type="button" class="btn btn-default btn-sm checkbox-toggle select-all"><i class="fa fa-square-o"></i></button>
-			<a href="#layout/edit" class="btn btn-default btn-add-layout">添加布局</a>
+			<div class="btn-group">
+				<button type="button" class="btn btn-default btn-sm checkbox-toggle select-all"><i class="fa fa-square-o"></i></button>
+				<button type="button" class="btn btn-default btn-sm btn-delete">删除布局</button>
+				<a href="#layout/edit" class="btn btn-default btn-sm btn-add-layout">添加布局</a>
+			</div>
 			<!-- <div class="has-feedback">
 					<input type="text" class="form-control">
 					<span class="input-group-btn">
