修改布局宽高字样

--- a/WEB-INF/templates/layout_table_row.html
+++ b/WEB-INF/templates/layout_table_row.html
@@ -1,8 +1,8 @@
 <tr data-layout-id="<%=id%>">
     <td style="width: 32px;"><input type="checkbox"></td>
     <td><a href="#layout/edit?id=<%=id%>" class="btn-table-detail"><%=name%></a></td>
-    <td>布局宽:<%=width%></td>
-    <td>布局高:<%=height%></td>
+    <td>宽:<%=width%></td>
+    <td>高:<%=height%></td>
     <td>背景色:<%=background_color%></td>
     <td>上传时间:<%=create_time%></td>
     <!-- <td>编辑</td> -->
