频道样式更新

--- a/WEB-INF/templates/channel_edit_main.html
+++ b/WEB-INF/templates/channel_edit_main.html
@@ -38,7 +38,7 @@
                     </h3>
                     <div class="tools">
                         <a class="btn btn-default btn-xs btn-program-delete" title="删除" data-program-type="Timed"><i class="glyphicon glyphicon-trash" style="font-size:12px;"></i></a>
-                        <a  class="btn btn-default btn-xs btn-program-new" title="添加" data-program-type="Timed"><i class="glyphicon glyphicon-plus" style="font-size:12px;"></i></a>
+                        <a  class="btn btn-primary btn-xs btn-program-new" title="添加" data-program-type="Timed"><i class="glyphicon glyphicon-plus" style="font-size:12px;"></i></a>
                      </div>
                 </div>
                 <ul>
@@ -78,7 +78,7 @@
                             <% } %>
                         </select>
                         <a class="btn btn-default btn-xs btn-program-delete" title="删除" data-program-type="Regular"><i class="glyphicon glyphicon-trash" style="font-size:12px;"></i></a>
-                        <a  class="btn btn-default btn-xs btn-program-new" title="添加" data-program-type="Regular"><i class="glyphicon glyphicon-plus" style="font-size:12px;"></i></a>
+                        <a  class="btn btn-primary btn-xs btn-program-new" title="添加" data-program-type="Regular"><i class="glyphicon glyphicon-plus" style="font-size:12px;"></i></a>
                      </div>
                 
                 </div>
