--- a/WEB-INF/templates/channel_edit_program.html
+++ b/WEB-INF/templates/channel_edit_program.html
@@ -13,13 +13,19 @@
 
 
     <div class="channel-program-timer">
-        <label>
-            开始时间
-        <input type="datetime-local" data-field="lifetime_start" step="1" value="<%=lifetime_start%>">
-        </label>
+        <div class="input-group">
+            <span class="input-group-addon">开始</span>
+            <input type="datetime-local" class="form-control" data-field="lifetime_start" step="1" value="<%=lifetime_start%>">
+        </div>
+        <div class="input-group">
+            <span class="input-group-addon">结束</span>
+            <input type="datetime-local" class="form-control" data-field="lifetime_end" step="1" value="<%=lifetime_end%>">
+        </div>
+
+
+
         <label>
             结束时间
-        <input type="datetime-local" data-field="lifetime_end" step="1" value="<%=lifetime_end%>">
         </label>
         <label>
             持续时间
