--- a/resources/css/pages/channel/edit.css
+++ b/resources/css/pages/channel/edit.css
@@ -240,7 +240,24 @@
     border: solid 1px #ddd;
 }
 
+.channel-program-timer label{
+    font-weight: 400;
+}
 
 
 
+
+.channel-program-timer.timed-program label:nth-of-type(1),.channel-program-timer.timed-program label:nth-of-type(2){
+    display: none;
+}
+
+.channel-program-timer.timed-program .input-group:nth-of-type(1),.channel-program-timer.timed-program .input-group:nth-of-type(2){
+    display: none;
+}
+
+
+.channel-program-timer .input-group{
+    float: left;
+    width: 287px;
+}
 
